--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
+    <meta name="description" content="Promotional website for GPT-3 algorythm"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <title>GPT-3/title>
   </head>
 
   <body>
