--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Promotional website for GPT-3 algorythm"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>GPT-3/title>
+    <title>GPT-3/<title>
   </head>
 
   <body>
